# taco

apps/: CMakeLists.txt
apps/tensor_012/: tensor_transpose.cpp
apps/tensor_3_fusion/: tensor_transpose.cpp
apps/tensor_4_fusion/: CMakeLists.txt  tensor_transpose.cpp
apps/tensor_4_radix/: tensor_transpose.cpp
apps/tensor_5/: tensor_transpose.cpp
apps/tensor_5_fusion/: tensor_transpose.cpp
include/taco/: transpose.h
src/transpose/: bucket.cpp  count.cpp  halfperm.cpp  qsort.cpp  radix.cpp  radix_bycoord.cpp
