add_subdirectory(tensor_times_vector)
add_subdirectory(tensor_transpose)
add_subdirectory(mat-transpose)
add_subdirectory(tensor_transpose_coo)
add_subdirectory(tensor_012)
add_subdirectory(tensor_021)
add_subdirectory(tensor_102)
add_subdirectory(tensor_120)
add_subdirectory(tensor_201)
add_subdirectory(tensor_210)
add_subdirectory(tensor_5)
add_subdirectory(tensor_5_fusion)
add_subdirectory(tensor_3_fusion)